tests/purs/failing/OrphanInstanceWithDetermined.purs
-- @shouldFailWith OrphanInstance
module Main where
import Lib
data R
instance cflr :: C F L R
